# lglaf

./: extract-partitions.py  lglaf.py  partitions.py  pyproject.toml
rules.d/: 42-usb-lglaf.rules
src/: dump-file.py  lglaf.py
